# langgraph-supervisors

agentic-rag-simple-demo/: .env.example  .env.template  .gitignore  ARCHITECTURE_DIAGRAMS.md  MIGRATION_TO_V1.md  QUICKSTART.md  README.md  TESTING.md  langgraph.json  main.py  pyproject.toml  test_agentic_rag.py  test_direct_connection.py  verify_retrieval.py
agentic-rag-simple-demo/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
hierarchical-team-pattern-langgraph/: .env.example  ARCHITECTURE_DIAGRAMS.md  CHAT_IMPROVEMENTS.md  MIGRATION_TO_V1.md  QUICKSTART.md  README.md  UPGRADE_SUMMARY.md  langgraph.json  main.py  pyproject.toml  setup_env.sh  test_simple.py
hierarchical-team-pattern-langgraph/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
limitlessos/: AGENT_DESIGNS.yaml  API_ENDPOINTS.md  ARCHITECTURE_DIAGRAMS.md  ARCHITECTURE_OVERVIEW.md  CAMPAIGN_SYSTEM.md  CHANGELOG.md  Closer AI Agent Training.md  DATABASE_SCHEMA.md  EXAMPLE_CONVERSATIONS.md  Limitless OS – AI Sales Flow Manual.md  RAG_SYSTEM.md  READING_ORDER.md  README.md  SALES_PLAYBOOK.md  STATE_SCHEMA.md  TOOLS_API.yaml  TRADE_OFFS_ANALYSIS.md
limitlessos/nextjs16/: INTEGRATION_GUIDE.md  MIGRATION_SUMMARY.md  NEXTJS_16_SETUP.md  README.md
prebuilt-react-supervisor-agent/: NEXT_EXAMPLES_TODO.md
prebuilt-react-supervisor-agent/prebuilt-demo-simple-example/: .gitignore  ARCHITECTURE_DIAGRAMS.md  LANGGRAPH_STUDIO.md  MIGRATION_TO_V1.md  README.md  README_STUDIO.md  UPGRADE_SUMMARY.md  langgraph.json  main.py  manual_supervisor.py  prebuilt_supervisor.py  pyproject.toml
shared-state-langgraph-multi-agent-demo/: .env.example  .gitignore  ARCHITECTURE_DIAGRAMS.md  FEATURES.md  MIGRATION_TO_V1.md  README.md  STATE_FLOW_GUIDE.md  UPGRADE_SUMMARY.md  langgraph.json  main.py  pyproject.toml  test_web_search.py
shared-state-langgraph-multi-agent-demo/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
shared-state-langgraph-multi-agent-demo/results/: README.md
stateful-supabase-checkpointer-sales/: ARCHITECTURE_DIAGRAMS.md  QUICKSTART.md  README.md  WALKTHROUGH.md  chat.py  drop_all_tables.py  interactive_sales.py  langgraph.json  main.py  pyproject.toml  quick_queries_supabase.py  recreate_tables.py  sales_qualification.py  simple_test.py
stateful-supabase-checkpointer-sales/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
stateful-workflow-langgraph-persistence-demo/: .env.example  HOW_IT_WORKS.md  PRACTICAL_EXAMPLES.md  check_raw_data.py  interactive_query.py  langgraph.json  main.py  pyproject.toml  quick_queries.py
stateful-workflow-langgraph-persistence-demo-sqlite/: .gitignore  DATABASE_GUIDE.md  DATABASE_QUERIES_GUIDE.md  MIGRATION_TO_V1.md  QUICKSTART.md  QUICK_DB_COMMANDS.md  README.md  README_PERSISTENCE.md  UPGRADE_SUMMARY.md  pyproject.toml  query_database.py  simple_inspector.py  state_viewer.py
stateful-workflow-langgraph-persistence-demo-sqlite/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
stateful-workflow-langgraph-persistence-demo-supabase/: CLEANUP_COMPLETE.md  HOW_IT_WORKS.md  MIGRATION_COMPLETE.md  README.md  README_SUPABASE.md  SUMMARY.md  SUPABASE_MIGRATION_GUIDE.md  SUPABASE_QUICKSTART.md  check_and_create_tables.py  main.py  pyproject.toml  query_with_langgraph.py  test_supabase_connection.py  verify_tables.py
stateful-workflow-langgraph-persistence-demo-supabase/.langgraph_api/: .langgraph_ops.pckl
stateful-workflow-langgraph-persistence-demo/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl
supervisor-email-cal-demo/: .env.example  README.md  main.py
supervisor-email-cal-demo/docs/: implementation-guide.md  model-names-reference.md
supervisor-langchain-email-cal-demo/: ARCHITECTURE_DIAGRAMS.md  PROJECT_OVERVIEW.md  main_with_hitl.py  pyproject.toml  setup_env.sh
supervisor-langchain-email-cal-demo/docs/: README.md  architecture.md  data-flow.md  model-switching.md  visual-summary.md
supervisor-langgraph-email-cal-demo/: AGENT_CHAT_UI_SETUP.md  IMPLEMENTATION_NOTES.md  QUICK_START.md  README.md  langgraph.json  main.py  pyproject.toml  test_run.py
supervisor-subgraph-pattern-demo-langgraph/: .env.example  .gitignore  ARCHITECTURE_DIAGRAMS.md  GETTING_STARTED.md  IMPORTANT_NOTE.md  MIGRATION_TO_V1.md  NEXT_TUTORIALS_RECOMMENDATIONS.md  QUICKSTART.md  README.md  SETUP_CHECKLIST.md  SUBGRAPHS_VS_SUPERVISOR.md  TESTING_GUIDE.md  TEST_CASES.md  TROUBLESHOOTING.md  UPGRADE_SUMMARY.md  langgraph.json  main.py  pyproject.toml  test_scenarios.py  test_simple.py
