[project]
name = "hierarchical-team-pattern-langgraph"
version = "0.1.0"
description = "Hierarchical multi-agent supervisor pattern with LangGraph"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2.58",
    "langchain-openai>=0.3.0",
    "langchain-core>=0.3.64",
    "python-dotenv>=1.0.0",
    "langgraph-cli[inmem]>=0.1.0",
]
