[project]
name = "shared-state-langgraph-multi-agent-demo"
version = "0.1.0"
description = "Multi-agent collaboration with shared state pattern using LangGraph"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2.58",
    "langchain-openai>=0.3.0",
    "langchain-core>=0.3.64",
    "langchain-community>=0.3.0",
    "python-dotenv>=1.0.0",
    "tavily-python>=0.5.0",
    "langgraph-cli[inmem]>=0.1.0",
]
