[project]
name = "stateful-workflow-langgraph-persistence-demo"
version = "0.1.0"
description = "Stateful workflows with persistence using LangGraph checkpointers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2.58",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "langchain-openai>=0.3.0",
    "langchain-core>=0.3.64",
    "python-dotenv>=1.0.0",
    "langgraph-cli[inmem]>=0.1.0",
]
