[project]
name = "supervisor-langgraph-email-cal-demo"
version = "0.1.0"
description = "LangGraph Supervisor Agent Demo with Calendar and Email Agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.0.2",
    "langchain-anthropic>=1.0.0",
    "langchain-core>=1.0.0",
    "langchain-openai>=1.0.1",
    "langgraph>=1.0.1",
    "python-dotenv>=1.1.1",
]
