[project]
name = "supervisor-subgraph-pattern-demo-langgraph"
version = "0.1.0"
description = "Customer Support System with Subgraphs - LangGraph v1 Demo"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=1.0.1",                       # LangGraph v1
    "langchain>=1.0.0",                       # LangChain v1
    "langchain-core>=1.0.0,<2.0.0",           # Core components
    "langchain-openai>=1.0.1",                # OpenAI integration
    "python-dotenv>=1.0.0",
    "langgraph-cli[inmem]>=0.4.4",            # LangGraph Studio support
]
