[project]
name = "prebuilt-demo-simple-example"
version = "0.1.0"
description = "Prebuilt supervisor demo using create_supervisor and create_react_agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2.58",
    "langgraph-supervisor>=0.0.6",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-core>=0.3.64",
    "python-dotenv>=1.0.0",
]
